--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -3,7 +3,7 @@ name: Tests CI
 on:
   push:
     branches:
-      - 'master'          # Default branch
+      - 'masterx'          # Default branch
       - 'feature-**'      # Feature branches
       - '[0-9]+.[0-9]+.x' # Release branches
     paths-ignore:
