--- a/.github/workflows/DownloadAndRun.yml
+++ b/.github/workflows/DownloadAndRun.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for better relevancy of analysis
+          fetch-depth: 0  # Shallow clones should be disabled for better relevancy of analysis.
 
       - name: Xygeni-Scanner
         uses: xygeni/xygeni-action@v3.2.0
