--- a/.github/workflows/xygeni-labdev-tuneado.yml
+++ b/.github/workflows/xygeni-labdev-tuneado.yml
@@ -42,14 +42,15 @@ jobs:
               echo cp /home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/$i "/home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/${i}.json"
               cp /home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/$i "/home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/${i}.json"
           done
-          echo Finikitaun !!
-          ls -l /home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/
+          echo Finikitaun 
+          ls -l /home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos
+          echo Adios 
           #cat /home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/deps.*.json
 
           for i in {1..5}
           do
             echo Vuelta $i
-            $HOME/.xygeni/xygeni report-upload -n ${{ github.event.repository.name }}-$i \
+            $HOME/.xygeni/xygeni report-upload -n "${{ github.event.repository.name }}-$i" \
             -r /home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/codetamper.*.json \
              -r /home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/compliance.*.json \
              -r /home/runner/work/${{ github.event.repository.name }}/${{ github.event.repository.name }}/reports/LGVExternalRepos/iac.*.json \
