--- a/.github/workflows/xygeni-labdev-tuneado.yml
+++ b/.github/workflows/xygeni-labdev-tuneado.yml
@@ -12,16 +12,23 @@ jobs:
     name: Xygeni Scan
     runs-on: ubuntu-latest
     steps:
+      - name: Set Xygeni env 
+        run: |
+            echo xy_url "${{ github.event.client_payload.xy_url }}"
+ 
+
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for better relevancy of analysis
+
+      
 
       - name: Xygeni-Scanner
         uses: xygeni/xygeni-action@v3.2.0
         id: Xygeni-Scanner
         with:
-          xygeni_url: https://apidemo.xygeni.io/deps-doctor-service
-          token: ${{ secrets.XYGENI_TOKEN }}
+          xygeni_url: "${{ github.event.client_payload.xy_url }}"
+          token: "${{ github.event.client_payload.xy_token }}"
           gh_token: ${{ secrets.PAT_FOR_XYGENI_SCAN }}
           command: scan --never-fail --include-collaborators --no-upload -f json -o reports/${{ github.repository }} -n ${{ github.repository }}
 
