--- a/.github/workflows/DownloadAndRun.yml
+++ b/.github/workflows/DownloadAndRun.yml
@@ -20,8 +20,8 @@ jobs:
         uses: xygeni/xygeni-action@v3.2.0
         id: Xygeni-Scanner
         with:
-          xygeni_url: https://apidemo.xygeni.io/deps-doctor-service
-          token: ${{ secrets.XYGENI_TOKEN }}
+          xygeni_url: "${{ github.event.client_payload.xy_url }}"
+          token: "${{ github.event.client_payload.xy_token }}"
           gh_token: ${{ secrets.PAT_FOR_XYGENI_SCAN }}
           command: scan --help
 
@@ -33,7 +33,7 @@ jobs:
           name: archive-bin
           
              
-      - name: Uploading reports .. reports/LGVExternalRepos/deps.Mindustry
+      - name: Uploading reports .. 
         run: |
           echo Executing Xygeni scan ....  
           echo ${{ github.event.repository.name }}
